images link fixed

--- a/ProyectWebpage/index.html
+++ b/ProyectWebpage/index.html
@@ -17,7 +17,7 @@
 
  
     <header id="main-header">
-        <a href="index.html" id="logo"> <img src="/images/Logotempt-removebg-preview.png" alt="OfLogo"> </a>
+        <a href="index.html" id="logo"> <img src="/ProyectWebpage/images/Logotempt-removebg-preview.png" alt="OfLogo"> </a>
         <nav>
             <ul>
               <li>
@@ -86,9 +86,9 @@
                             <h2 > Models</h2>
 
                     
-                            <iframe src="/PDF/models.pdf" width="100%" height="500px">
+                            <iframe src="/ProyectWebpage/PDF/models.pdf" width="100%" height="500px">
                             </iframe>
-                            <p id="downloads">Download:<a href="PDF/models.pdf"> here </a></p>
+                            <p id="downloads">Download:<a href="/ProyectWebpage/PDF/models.pdf"> here </a></p>
                     </div>  
                 </div> 
                  
