--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyect</title>
+    <title> Gym Schedule Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Mega:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
  
     <header id="main-header">
-        <a href="index.html" id="logo"> <img src="/ProyectWebpage/images/Logotempt-removebg-preview.png" alt="OfLogo"> </a>
+        <a href="index.html" id="logo"> <img src="images/LogoGym1.png" alt="OfLogo"> </a>
         <nav>
             <ul>
               <li>
@@ -86,9 +86,9 @@
                             <h2 > Models</h2>
 
                     
-                            <iframe src="/ProyectWebpage/PDF/models.pdf" width="100%" height="500px">
+                            <iframe src="/PDF/models.pdf" width="100%" height="500px">
                             </iframe>
-                            <p id="downloads">Download:<a href="/ProyectWebpage/PDF/models.pdf"> here </a></p>
+                            <p id="downloads">Download:<a href="/PDF/models.pdf"> here </a></p>
                     </div>  
                 </div> 
                  
