Commit to fix pdf

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <h2 > Models</h2>
 
                     
-                            <iframe src="/PDF/models.pdf" width="100%" height="500px">
+                            <iframe src="PDF/models.pdf" width="100%" height="500px">
                             </iframe>
                             <p id="downloads">Download:<a href="/PDF/models.pdf"> here </a></p>
                     </div>  
