--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
             </li>
 
             </ul>
+
+            <!-- <a href="#side-drawer" class=" menu-btn" > <img src="images/menu.png" alt= "menu"></a> -->
           </nav>
 
-          <!-- <div id= "side-menu"> <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-          </div>  -->
-
           <a href="#side-drawer" class=" menu-btn" > <img src="images/menu.png" alt= "menu"></a>
+
+         
 
         <aside id="side-drawer"> 
             <header> 
@@ -83,7 +84,7 @@
             keep their residents safe during the pandemic.</h4>
             <p> "The main goal of this project is to develop a website where residents of a specific condominium
                 can see the available time that they can use the facility with a calendar and schedule when its more
-                accessible for them. This will allow the residents to manage their time more efficiently and don’t waste time." </p>
+                accessiblefor them. This will allow the residents to manage their time more efficiently and don’t waste time." </p>
             </div>
     </div>
 
@@ -112,7 +113,7 @@
                 <div class="container"> 
                     <div class="row">
                             <h2 > Models</h2>
-
+ 
                     
                             <iframe src="PDF/models.pdf" width="100%" height="500px">
                             </iframe>
