--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <iframe src="PDF/models.pdf" width="150%" height="500px">
                             </iframe>
                             <p id="downloads">Download:<a href="PDF/models.pdf"> here </a></p>
-                            <img src="/images/Softwarearch.png" width="700px" alt="Softwarearch">
+                            <!-- <img src="/images/Softwarearch.png" width="700px" alt="Softwarearch"> -->
                     </div>  
                 </div> 
                  
