Risk management  tempt

--- a/index.html
+++ b/index.html
@@ -143,11 +143,9 @@
                 <div class="row">
                     <div class="columns"> 
                 <h2 > Risk Management </h2>
-                <p class="lead">
-                         The root cause of residents wasting time by the lack of organization of the condominium will be eliminated once the website is completed, 
-                    residents are going to be able to schedule a specific time to use the facilities and that will control the regulations of the condominium. 
-                </p>
-            </div> 
+            </div> <iframe src="PDF/Risk_Management.pdf" width="150%" height="500px">
+            </iframe>
+            <p id="downloads">Download:<a href="PDF/Risk_Management.pdf"> here </a></p>
             </div>
             </div>   
          </aside>
