--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     <h2 > Time Effort</h2>
                     <p class="lead">
                           <p>Trello </p>
+                          <img src="images/Trello.png" width="600px" >
 
                     </p>
          
