--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
                     <li>María H Cotto Nieves</li>
                    <li> Jose L Lazcano</li>
                    <li> Kevin R Linera Hernandez</li>
-                    <li> Ramos Lugo</li> 
+                    <li>Fernando Ramos Lugo</li> 
                    <li> Grace M Fernandez Rivera</li>
                    <li> Gabriel Garcia</li>
                    <li>Alaina N. Del Moral Martínez</li> 
                     <li> Sebastian O Espinosa </li>
-                   <li> Luis Adorno</li>
+                   <li> "Luis Adorno"</li>
                    <li> Sonia Ortega Espín</li>
                 </ul>
         
