--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <aside id="side-drawer"> 
             <header> 
-          <a href="#" class=" menu-btn" > <img src="images/menu.png" alt= "menu"></a>
+          <a href="index.html" class=" menu-btn" > <img src="images/menu.png" alt= "menu"></a>
           </header>
             <ul >
                 <li>
@@ -218,7 +218,7 @@
                 <p class="lead">
                   <p >Group 5:</p>
                    
-                  <ul>
+                  <ul class="group">
                     <li>Andre A Clavell Alvarez</li>
                     <li>María H Cotto Nieves</li>
                    <li> Jose L Lazcano</li>
@@ -228,7 +228,7 @@
                    <li> Gabriel Garcia</li>
                    <li>Alaina N. Del Moral Martínez</li> 
                     <li> Sebastian O Espinosa </li>
-                   <li> "Luis Adorno"</li>
+                   <li> Luis Adorno</li>
                    <li> Sonia Ortega Espín</li>
                 </ul>
         
