--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 <div class="container"> 
                     <div class="row">
                             <h2 > Models</h2>
-                            <iframe src="PDF/models.pdf" width="150%" height="500px">
+                            <iframe src="PDF/Requirement-Models.pdf" width="150%" height="500px">
                             </iframe>
-                            <p id="downloads">Download:<a href="PDF/models.pdf"> here </a></p>
+                            <p id="downloads">Download:<a href="PDF/Requirement-Models.pdf"> here </a></p>
                             <!-- <img src="/images/Softwarearch.png" width="700px" alt="Softwarearch"> -->
                     </div>  
                 </div> 
