--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                 <div class="row">
                     <div class="columns"> 
                 <h2 > Risk Management </h2>
-            </div> <iframe src="PDF/Risk_Management.pdf" width="150%" height="500px">
+            </div> <iframe src="PDF/Risk-Management- Requirements.pdf" width="150%" height="500px">
             </iframe>
-            <p id="downloads">Download:<a href="PDF/Risk_Management.pdf"> here </a></p>
+            <p id="downloads">Download:<a href="PDF/Risk-Management- Requirements.pdf"> here </a></p>
             </div>
             </div>   
          </aside>
@@ -254,7 +254,7 @@
             <a href="https://www.uprm.edu"> <img src="images/icons/UPR_at_Mayaguez_Seal.svg.png"  alt="UPRM logo"></a>
         </li>
     
-        <li> <a href="index.html"> <img src="images/logoOf.png" alt="logo"></a></li>
+        <li> <a href="index.html"> <img src="images/logoOf-removebg-preview.png" alt="logo"></a></li>
     </ul>
 </footer>
 </html>
